force-app/main/default/objects/DecisionRealEstateCheckMaster__c/DecisionRealEstateCheckMaster__c.object-meta.xml
<CustomObject>
    <label>決定物件チェックマスタ</label>
    <nameField>
        <label>決定物件チェックマスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>