force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>決定物件マスタ区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企業向け</fullName>
            </value>
            <value>
                <fullName>不動産仲介向け</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>