force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/IsReSelection10__c.field-meta.xml
<CustomField>
    <fullName>IsReSelection10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>物件再選定フラグ10</label>
    <type>Checkbox</type>
</CustomField>