force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/IsReSelection2__c.field-meta.xml
<CustomField>
    <fullName>IsReSelection2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>物件再選定フラグ2</label>
    <type>Checkbox</type>
</CustomField>