force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/IsReSelection4__c.field-meta.xml
<CustomField>
    <fullName>IsReSelection4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>物件再選定フラグ4</label>
    <type>Checkbox</type>
</CustomField>