force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Message10__c.field-meta.xml
<CustomField>
    <fullName>Message10__c</fullName>
    <label>メッセージ10</label>
    <type>TextArea</type>
</CustomField>