force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Message1__c.field-meta.xml
<CustomField>
    <fullName>Message1__c</fullName>
    <label>メッセージ1</label>
    <type>TextArea</type>
</CustomField>