force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Message2__c.field-meta.xml
<CustomField>
    <fullName>Message2__c</fullName>
    <label>メッセージ2</label>
    <type>TextArea</type>
</CustomField>