force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Question10__c.field-meta.xml
<CustomField>
    <fullName>Question10__c</fullName>
    <label>質問事項10</label>
    <type>TextArea</type>
</CustomField>