force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Question3__c.field-meta.xml
<CustomField>
    <fullName>Question3__c</fullName>
    <label>質問事項3</label>
    <type>TextArea</type>
</CustomField>