force-app/main/default/objects/DecisionRealEstateCheckMaster__c/fields/Question9__c.field-meta.xml
<CustomField>
    <fullName>Question9__c</fullName>
    <label>質問事項9</label>
    <type>TextArea</type>
</CustomField>