force-app/main/default/objects/DecisionRealEstateCheckMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CorporateHousingRegulation__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>